tests/kubernetes/custom-5.3.1/compliant/secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: compliant-secret
  namespace: secure-ns
  annotations:
    kms-key: "arn:aws:kms:us-west-2:123456789012:key/12345678-1234-1234-1234-123456789012"
    kubernetes.io/encryption-provider: "aws-kms"
type: Opaque
data:
  username: YWRtaW4=
  password: MWYyZDFlMmU2N2Rm
