tests/kubernetes/custom-5.3.1/compliant/terraform.json
{
  "apiVersion": "json.kyverno.io/v1alpha1",
  "kind": "terraform",
  "metadata": {
    "name": "compliant-terraform-plan"
  },
  "data": {
    "format_version": "1.0",
    "terraform_version": "1.4.6",
    "values": {
      "root_module": {
        "resources": [
          {
            "address": "aws_eks_cluster.main",
            "mode": "managed",
            "type": "aws_eks_cluster",
            "name": "main",
            "values": {
              "encryption_config": [
                {
                  "provider": [
                    {
                      "key_arn": "arn:aws:kms:us-west-2:940345864315:key/be74a9ad-f0d9-4d4a-bcb1-89e185c7a07d"
                    }
                  ],
                  "resources": ["secrets"]
                }
              ]
            }
          },
          {
            "address": "aws_kms_key.eks",
            "mode": "managed",
            "type": "aws_kms_key",
            "name": "eks",
            "values": {
              "description": "EKS Secret Encryption Key",
              "enable_key_rotation": true,
              "policy": "{\"Id\":\"key-default-1\",\"Statement\":[{\"Action\":\"kms:*\",\"Effect\":\"Allow\",\"Principal\":{\"AWS\":\"arn:aws:iam::940345864315:root\"},\"Resource\":\"*\",\"Sid\":\"Enable IAM User Permissions\"}],\"Version\":\"2012-10-17\"}"
            }
          }
        ]
      }
    }
  }
}
